<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logopnp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/txtTitle"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_below="@id/imageApp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/txtMatkul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:text="@string/matkul"
        android:textColor="@color/cyan1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/editMatkul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMatkul"
        android:hint="@string/inmat"
        android:textColor="@color/cyan"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/txtdosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editMatkul"
        android:text="@string/dosen"
        android:textSize="18sp"
        android:textColor="@color/cyan"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/editDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtdosen"
        android:hint="@string/indos"
        android:textColor="@color/cyan"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDos"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSubmit"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/output"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textColor="@color/cyan"
        />

</RelativeLayout>